# oakley-bookings

./: .env.example  README.md  SKILL.md  pyproject.toml
oakley_bookings/: __init__.py  auth.py  cli.py  google_places.py
oakley_bookings.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
oakley_bookings/common/: formatting.py
tests/: test_db.py  test_discovery.py  test_formatting.py  test_google_places.py  test_platforms.py
