[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakley-bookings"
version = "1.1.0"
description = "Restaurant discovery & booking CLI — Google Places search, Resy booking, multi-platform deep links"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pytz>=2023.3",
]

[project.scripts]
oakley-bookings = "oakley_bookings.cli:main"

[tool.setuptools.packages.find]
include = ["oakley_bookings*"]
